welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while (!finTest()){
         ^SnakeBuggle:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^SnakeBuggle:16: warning: enclosing method finTest has result type Unit: return value discarded
    return true
    ^SnakeBuggle:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  }else{return false}
               ^SnakeBuggle:17: warning: enclosing method finTest has result type Unit: return value discarded
  }else{return false}
        ^